ags (0.7.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed data-race of resetting soundcard device and apply presets
	* improved API reference manual

ags (0.7.48)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restart soundcard playback as doing ags_apply_presets_launch()
	* implemented AgsNote in AgsAudioSignal
	* improved gtk-doc related files

ags (0.7.47)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* modified Makefile.am to use -Wformat and -Werror=format-security
	* modified Makefile.am to include docs/images/ags_automation_window_dssi_xsynth.png
	* fixed format security errors

ags (0.7.46)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMainLoop::interrupt and AgsMainLoop::monitor
	* implemented AgsThread::interrupted and use it in ags_gui_thread.c
	* implemented ags_audio_loop_timing_thread() to emit AgsMainLoop::interrupt
	* fixed configuration in place of AgsSynth and AgsFFPlayer by using AgsSynthGenerator repectively AgsAudioFileLink
	* fixed AgsTactable signals to be emitted
	* fixed configuration in place to reset thread frequency
	* added thread posix signals to AgsGuiThread

ags (0.7.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented resetting samplerate, buffer size and format. Thus added properties to AgsAudio and AgsChannel.
	* implemented ags_audio_file_check_suffix() and ags_ipatch_check_suffix()
	* implemented ags_input_open_file()
	* implemented soundcard property of AgsIpatch
	* implemented preset, instrument and sample property of AgsAudioFileLink
	* implemented AgsSynthGenerator and ags_synth_util.c
	* implemented copy functions in ags_audio_buffer_util.c
	* implemented AgsApplyPresets recall
	* refactored replacing template AgsAudioSignal as adding new template
	* improved mutices in ags_audio_open_files()
	* fixed ags_devout_realloc_buffer() to use pcm_channels instead of dsp_channels

ags (0.7.44)
