@@ -30,6 +30,16 @@ void ags_simple_file_write_finalize(GObject *gobject);
 
 void ags_simple_file_write_launch(AgsTask *task);
 
+/**
+ * SECTION:ags_simple_file_write
+ * @short_description: task to write simple file format
+ * @title: AgsConfig
+ * @section_id:
+ * @include: ags/X/task/ags_simple_file_write.h
+ *
+ * #AgsSimpleFileWrite lets you write the simple file format as a task.
+ */
+
 static gpointer ags_simple_file_write_parent_class = NULL;
 static AgsConnectableInterface *ags_simple_file_write_parent_connectable_interface;
 
@@ -140,6 +150,16 @@ ags_simple_file_write_launch(AgsTask *task)
   gdk_threads_leave();
 }
 
+/**
+ * ags_simple_file_write_new:
+ * @simple_file: the #AgsSimpleFile
+ *
+ * Create a new task to write the simple file format.
+ *
+ * Returns: the #AgsSimpleFileWrite task
+ * 
+ * Since: 0.7.42
+ */
 AgsSimpleFileWrite*
 ags_simple_file_write_new(AgsSimpleFile *simple_file)
 {
